framec/tests/snapshots/lua_snapshots__selfcall.snap
---
source: framec/tests/lua_snapshots.rs
expression: "compile_fixture(\"06_selfcall\", \"lua\")"
---
local SelfCallFrameEvent = {}
SelfCallFrameEvent.__index = SelfCallFrameEvent

function SelfCallFrameEvent.new(message, parameters)
    local self = setmetatable({}, SelfCallFrameEvent)
    self._message = message
    self._parameters = parameters or {}
    return self
end


local SelfCallFrameContext = {}
SelfCallFrameContext.__index = SelfCallFrameContext

function SelfCallFrameContext.new(event, default_return)
    local self = setmetatable({}, SelfCallFrameContext)
    self._event = event
    self._return = default_return
    self._data = {}
    self._transitioned = false
    return self
end


local SelfCallCompartment = {}
SelfCallCompartment.__index = SelfCallCompartment

function SelfCallCompartment.new(state, parent_compartment)
    local self = setmetatable({}, SelfCallCompartment)
    self.state = state
    self.state_args = {}
    self.state_vars = {}
    self.enter_args = {}
    self.exit_args = {}
    self.forward_event = nil
    self.parent_compartment = parent_compartment
    return self
end

function SelfCallCompartment:copy()
    local c = SelfCallCompartment.new(self.state, self.parent_compartment)
    c.state_args = {}
    for k, v in pairs(self.state_args) do c.state_args[k] = v end
    c.state_vars = {}
    for k, v in pairs(self.state_vars) do c.state_vars[k] = v end
    c.enter_args = {}
    for k, v in pairs(self.enter_args) do c.enter_args[k] = v end
    c.exit_args = {}
    for k, v in pairs(self.exit_args) do c.exit_args[k] = v end
    c.forward_event = self.forward_event
    return c
end


local SelfCall = {}
SelfCall.__index = SelfCall

function SelfCall.new()
    local self = setmetatable({}, SelfCall)
    self._state_stack = {}
    self._context_stack = {}
    self.count = 0
    self.__compartment = self:__prepareEnter("Active", nil, nil)
    self.__next_compartment = nil
    return self
end

function SelfCall:_frame_init()
    local __e = SelfCallFrameEvent.new("$>", self.__compartment.enter_args)
    local __ctx = SelfCallFrameContext.new(__e, nil)
    self._context_stack[#self._context_stack + 1] = __ctx
    self:__kernel(__e)
    table.remove(self._context_stack)
end

function SelfCall._create()
    local c = SelfCall.new()
    c:_frame_init()
    return c
end

function SelfCall:hsm_chain()
    local t = {}
    t["Active"] = {"Active"}
    return t
end
function SelfCall:__prepareEnter(leaf, state_args, enter_args)
    state_args = state_args or {}
    enter_args = enter_args or {}
    local comp = nil
    local chain = self:hsm_chain()[leaf]
    for i = 1, #chain do
        local new_comp = SelfCallCompartment.new(chain[i])
        new_comp.state_args = {}
        for j = 1, #state_args do new_comp.state_args[j] = state_args[j] end
        new_comp.enter_args = {}
        for j = 1, #enter_args do new_comp.enter_args[j] = enter_args[j] end
        new_comp.parent_compartment = comp
        comp = new_comp
    end
    return comp
end

function SelfCall:__prepareExit(exit_args)
    local comp = self.__compartment
    while comp ~= nil do
        comp.exit_args = {}
        for j = 1, #exit_args do comp.exit_args[j] = exit_args[j] end
        comp = comp.parent_compartment
    end
end

function SelfCall:__kernel(__e)
    -- Route event to current state.
    self:__router(__e)
    -- Drain any transitions queued by the handler.
    while self.__next_compartment ~= nil do
        local next_compartment = self.__next_compartment
        self.__next_compartment = nil
        local exit_event = SelfCallFrameEvent.new("<$", self.__compartment.exit_args)
        self:__router(exit_event)
        self.__compartment = next_compartment
        local forward_event = next_compartment.forward_event
        next_compartment.forward_event = nil
        if forward_event == nil then
            local enter_event = SelfCallFrameEvent.new("$>", self.__compartment.enter_args)
            self:__router(enter_event)
        elseif forward_event._message == "$>" then
            self:__router(forward_event)
        else
            local enter_event = SelfCallFrameEvent.new("$>", self.__compartment.enter_args)
            self:__router(enter_event)
            self:__router(forward_event)
        end
        for _, ctx in ipairs(self._context_stack) do
            ctx._transitioned = true
        end
    end
end

function SelfCall:__router(__e)
    local handler = self["_state_" .. self.__compartment.state]
    if handler then
        handler(self, __e, self.__compartment)
    end
end

function SelfCall:__transition(next_compartment)
    self.__next_compartment = next_compartment
end

function SelfCall:kick()
    local __e = SelfCallFrameEvent.new("kick", {})
    local __ctx = SelfCallFrameContext.new(__e, nil)
    self._context_stack[#self._context_stack + 1] = __ctx
    local __ok, __err = pcall(self.__kernel, self, __e)
    if not __ok then
        self._context_stack[#self._context_stack] = nil
        error(__err)
    end
    return table.remove(self._context_stack)._return
end

function SelfCall:report()
    local __e = SelfCallFrameEvent.new("report", {})
    local __ctx = SelfCallFrameContext.new(__e, nil)
    self._context_stack[#self._context_stack + 1] = __ctx
    local __ok, __err = pcall(self.__kernel, self, __e)
    if not __ok then
        self._context_stack[#self._context_stack] = nil
        error(__err)
    end
    return table.remove(self._context_stack)._return
end

function SelfCall:_state_Active(__e, compartment)
    if __e._message == "kick" then
        self:_s_Active_hdl_user_kick(__e, compartment)
        return
    end
    if __e._message == "report" then
        self:_s_Active_hdl_user_report(__e, compartment)
        return
    end
end

function SelfCall:_s_Active_hdl_user_kick(__e, compartment)
    self.count = self.count + 1
    self:report()
    if #self._context_stack > 0 and self._context_stack[#self._context_stack]._transitioned then return end
end

function SelfCall:_s_Active_hdl_user_report(__e, compartment)
    self._context_stack[#self._context_stack]._return = self.count
end

return {
    SelfCall = SelfCall,
}
