framec/tests/snapshots/lua_snapshots__state_args.snap
---
source: framec/tests/lua_snapshots.rs
expression: "compile_fixture(\"04_state_args\", \"lua\")"
---
local StateArgsFrameEvent = {}
StateArgsFrameEvent.__index = StateArgsFrameEvent

function StateArgsFrameEvent.new(message, parameters)
    local self = setmetatable({}, StateArgsFrameEvent)
    self._message = message
    self._parameters = parameters or {}
    return self
end


local StateArgsFrameContext = {}
StateArgsFrameContext.__index = StateArgsFrameContext

function StateArgsFrameContext.new(event, default_return)
    local self = setmetatable({}, StateArgsFrameContext)
    self._event = event
    self._return = default_return
    self._data = {}
    self._transitioned = false
    return self
end


local StateArgsCompartment = {}
StateArgsCompartment.__index = StateArgsCompartment

function StateArgsCompartment.new(state, parent_compartment)
    local self = setmetatable({}, StateArgsCompartment)
    self.state = state
    self.state_args = {}
    self.state_vars = {}
    self.enter_args = {}
    self.exit_args = {}
    self.forward_event = nil
    self.parent_compartment = parent_compartment
    return self
end

function StateArgsCompartment:copy()
    local c = StateArgsCompartment.new(self.state, self.parent_compartment)
    c.state_args = {}
    for k, v in pairs(self.state_args) do c.state_args[k] = v end
    c.state_vars = {}
    for k, v in pairs(self.state_vars) do c.state_vars[k] = v end
    c.enter_args = {}
    for k, v in pairs(self.enter_args) do c.enter_args[k] = v end
    c.exit_args = {}
    for k, v in pairs(self.exit_args) do c.exit_args[k] = v end
    c.forward_event = self.forward_event
    return c
end


local StateArgs = {}
StateArgs.__index = StateArgs

function StateArgs.new()
    local self = setmetatable({}, StateArgs)
    self._state_stack = {}
    self._context_stack = {}
    self.__compartment = self:__prepareEnter("Idle", nil, nil)
    self.__next_compartment = nil
    return self
end

function StateArgs:_frame_init()
    local __e = StateArgsFrameEvent.new("$>", self.__compartment.enter_args)
    local __ctx = StateArgsFrameContext.new(__e, nil)
    self._context_stack[#self._context_stack + 1] = __ctx
    self:__kernel(__e)
    table.remove(self._context_stack)
end

function StateArgs._create()
    local c = StateArgs.new()
    c:_frame_init()
    return c
end

function StateArgs:hsm_chain()
    local t = {}
    t["Idle"] = {"Idle"}
    t["Holding"] = {"Holding"}
    return t
end
function StateArgs:__prepareEnter(leaf, state_args, enter_args)
    state_args = state_args or {}
    enter_args = enter_args or {}
    local comp = nil
    local chain = self:hsm_chain()[leaf]
    for i = 1, #chain do
        local new_comp = StateArgsCompartment.new(chain[i])
        new_comp.state_args = {}
        for j = 1, #state_args do new_comp.state_args[j] = state_args[j] end
        new_comp.enter_args = {}
        for j = 1, #enter_args do new_comp.enter_args[j] = enter_args[j] end
        new_comp.parent_compartment = comp
        comp = new_comp
    end
    return comp
end

function StateArgs:__prepareExit(exit_args)
    local comp = self.__compartment
    while comp ~= nil do
        comp.exit_args = {}
        for j = 1, #exit_args do comp.exit_args[j] = exit_args[j] end
        comp = comp.parent_compartment
    end
end

function StateArgs:__kernel(__e)
    -- Route event to current state.
    self:__router(__e)
    -- Drain any transitions queued by the handler.
    while self.__next_compartment ~= nil do
        local next_compartment = self.__next_compartment
        self.__next_compartment = nil
        local exit_event = StateArgsFrameEvent.new("<$", self.__compartment.exit_args)
        self:__router(exit_event)
        self.__compartment = next_compartment
        local forward_event = next_compartment.forward_event
        next_compartment.forward_event = nil
        if forward_event == nil then
            local enter_event = StateArgsFrameEvent.new("$>", self.__compartment.enter_args)
            self:__router(enter_event)
        elseif forward_event._message == "$>" then
            self:__router(forward_event)
        else
            local enter_event = StateArgsFrameEvent.new("$>", self.__compartment.enter_args)
            self:__router(enter_event)
            self:__router(forward_event)
        end
        for _, ctx in ipairs(self._context_stack) do
            ctx._transitioned = true
        end
    end
end

function StateArgs:__router(__e)
    local handler = self["_state_" .. self.__compartment.state]
    if handler then
        handler(self, __e, self.__compartment)
    end
end

function StateArgs:__transition(next_compartment)
    self.__next_compartment = next_compartment
end

function StateArgs:load(initial)
    local __e = StateArgsFrameEvent.new("load", {initial})
    local __ctx = StateArgsFrameContext.new(__e, nil)
    self._context_stack[#self._context_stack + 1] = __ctx
    local __ok, __err = pcall(self.__kernel, self, __e)
    if not __ok then
        self._context_stack[#self._context_stack] = nil
        error(__err)
    end
    return table.remove(self._context_stack)._return
end

function StateArgs:adjust(delta)
    local __e = StateArgsFrameEvent.new("adjust", {delta})
    local __ctx = StateArgsFrameContext.new(__e, nil)
    self._context_stack[#self._context_stack + 1] = __ctx
    local __ok, __err = pcall(self.__kernel, self, __e)
    if not __ok then
        self._context_stack[#self._context_stack] = nil
        error(__err)
    end
    return table.remove(self._context_stack)._return
end

function StateArgs:peek()
    local __e = StateArgsFrameEvent.new("peek", {})
    local __ctx = StateArgsFrameContext.new(__e, nil)
    self._context_stack[#self._context_stack + 1] = __ctx
    local __ok, __err = pcall(self.__kernel, self, __e)
    if not __ok then
        self._context_stack[#self._context_stack] = nil
        error(__err)
    end
    return table.remove(self._context_stack)._return
end

function StateArgs:_state_Idle(__e, compartment)
    if __e._message == "load" then
        self:_s_Idle_hdl_user_load(__e, compartment)
        return
    end
end

function StateArgs:_state_Holding(__e, compartment)
    local value = self.__compartment.state_args[1]
    if __e._message == "adjust" then
        self:_s_Holding_hdl_user_adjust(__e, compartment)
        return
    end
    if __e._message == "peek" then
        self:_s_Holding_hdl_user_peek(__e, compartment)
        return
    end
end

function StateArgs:_s_Idle_hdl_user_load(__e, compartment)
    local initial = __e._parameters[1]
    local __compartment = self:__prepareEnter("Holding", table.pack(initial), nil)
    self:__transition(__compartment)
    return
end

function StateArgs:_s_Holding_hdl_user_adjust(__e, compartment)
    local value = compartment.state_args[1]
    local delta = __e._parameters[1]
    local __compartment = self:__prepareEnter("Holding", table.pack(value + delta), nil)
    self:__transition(__compartment)
    return
end

function StateArgs:_s_Holding_hdl_user_peek(__e, compartment)
    local value = compartment.state_args[1]
    self._context_stack[#self._context_stack]._return = value
end

return {
    StateArgs = StateArgs,
}
